@@ -110,7 +110,7 @@
  *                  -XX:+PrintInlining
  *                  -XX:+WhiteBoxAPI -Xbootclasspath/a:.
  *                  -Xbatch
- *                  -XX:+DoEscapeAnalysis -XX:+EliminateAllocations -XX:+EliminateLocks -XX:+EliminateNestedLocks -XX:+UseBiasedLocking
+ *                  -XX:+DoEscapeAnalysis -XX:+EliminateAllocations -XX:+EliminateLocks -XX:+EliminateNestedLocks
  *                  IterateHeapWithEscapeAnalysisEnabled
  * @run main/othervm/native
  *                  -agentlib:IterateHeapWithEscapeAnalysisEnabled
@@ -121,7 +121,7 @@
  *                  -XX:+PrintInlining
  *                  -XX:+WhiteBoxAPI -Xbootclasspath/a:.
  *                  -Xbatch
- *                  -XX:+DoEscapeAnalysis -XX:-EliminateAllocations -XX:+EliminateLocks -XX:+EliminateNestedLocks -XX:+UseBiasedLocking
+ *                  -XX:+DoEscapeAnalysis -XX:-EliminateAllocations -XX:+EliminateLocks -XX:+EliminateNestedLocks
  *                  IterateHeapWithEscapeAnalysisEnabled
  * @run main/othervm/native
  *                  -agentlib:IterateHeapWithEscapeAnalysisEnabled
@@ -132,7 +132,7 @@
  *                  -XX:+PrintInlining
  *                  -XX:+WhiteBoxAPI -Xbootclasspath/a:.
  *                  -Xbatch
- *                  -XX:-DoEscapeAnalysis -XX:-EliminateAllocations -XX:+EliminateLocks -XX:+EliminateNestedLocks -XX:+UseBiasedLocking
+ *                  -XX:-DoEscapeAnalysis -XX:-EliminateAllocations -XX:+EliminateLocks -XX:+EliminateNestedLocks
  *                  IterateHeapWithEscapeAnalysisEnabled
  *
  * @comment } BLOCK END NON EXCLUSIVE TESTCASES
@@ -590,7 +590,7 @@ public class IterateHeapWithEscapeAnalysisEnabled {
             // The new instance is an ArgEscape instance and escapes to the JVMTI agent
             // while the target thread is in the call to dontinline_endlessLoop(). At this
             // location there is no local variable that references the ArgEscape.
-            ((ABBox) dontinline_endlessLoop(new ABBox(this))).synchronizedSlowInc();;
+            ((ABBox) dontinline_endlessLoop(new ABBox(this))).synchronizedSlowInc();
         }
     }
 
