@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,8 +28,14 @@ import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.reflect.Method;
 import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.io.IOException;
+import java.io.OutputStream;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.DirectoryStream;
 import java.nio.file.FileVisitResult;
 import java.nio.file.FileVisitor;
 import java.nio.file.Files;
@@ -52,6 +58,14 @@ import build.tools.symbolgenerator.CreateSymbols.ClassDescription;
 import build.tools.symbolgenerator.CreateSymbols.ClassList;
 import build.tools.symbolgenerator.CreateSymbols.ExcludeIncludeList;
 import build.tools.symbolgenerator.CreateSymbols.VersionDescription;
+import com.sun.tools.classfile.Attribute;
+import com.sun.tools.classfile.Attributes;
+import com.sun.tools.classfile.ClassFile;
+import com.sun.tools.classfile.ClassWriter;
+import com.sun.tools.classfile.ConstantPool;
+import com.sun.tools.classfile.ConstantPool.CPInfo;
+import com.sun.tools.classfile.ConstantPool.CONSTANT_Utf8_info;
+import com.sun.tools.classfile.ModulePackages_attribute;
 
 public class CreateSymbolsTestImpl {
 
@@ -215,82 +229,88 @@ public class CreateSymbolsTestImpl {
 
     @Test
     void testAnnotations() throws Exception {
-        doPrintElementTest("package t;" +
-                           "import java.lang.annotation.*;" +
-                           "public @Visible @Invisible class T { public void extra() { } }" +
-                           "@Retention(RetentionPolicy.RUNTIME) @interface Visible { }" +
-                           "@Retention(RetentionPolicy.CLASS) @interface Invisible { }",
-                           "package t;" +
-                           "import java.lang.annotation.*;" +
-                           "public @Visible @Invisible class T { }" +
-                           "@Retention(RetentionPolicy.RUNTIME) @interface Visible { }" +
-                           "@Retention(RetentionPolicy.CLASS) @interface Invisible { }",
-                           "t.T",
-                           "package t;\n\n" +
-                           "@t.Invisible\n" +
-                           "@t.Visible\n" +
-                           "public class T {\n\n" +
-                           "  public T();\n\n" +
-                           "  public void extra();\n" +
-                           "}\n",
-                           "t.Visible",
-                           "package t;\n\n" +
-                           "@java.lang.annotation.Retention(RUNTIME)\n" +
-                           "@interface Visible {\n" +
-                           "}\n");
-        doPrintElementTest("package t;" +
-                           "import java.lang.annotation.*;" +
-                           "import java.util.*;" +
-                           "public class T {" +
-                           "    public void test(int h, @Invisible int i, @Visible List<String> j, int k) { }" +
-                           "}" +
-                           "@Retention(RetentionPolicy.RUNTIME) @interface Visible { }" +
-                           "@Retention(RetentionPolicy.CLASS) @interface Invisible { }",
-                           "package t;" +
-                           "import java.lang.annotation.*;" +
-                           "import java.util.*;" +
-                           "public class T {" +
-                           "    public void test(int h, @Invisible int i, @Visible List<String> j, int k) { }" +
-                           "    public void extra() { }" +
-                           "}" +
-                           "@Retention(RetentionPolicy.RUNTIME) @interface Visible { }" +
-                           "@Retention(RetentionPolicy.CLASS) @interface Invisible { }",
-                           "t.T",
-                           "package t;\n\n" +
-                           "public class T {\n\n" +
-                           "  public T();\n\n" +
-                           "  public void test(int arg0,\n" +
-                           "    @t.Invisible int arg1,\n" +
-                           "    @t.Visible java.util.List<java.lang.String> arg2,\n" +
-                           "    int arg3);\n" +
-                           "}\n",
-                           "t.Visible",
-                           "package t;\n\n" +
-                           "@java.lang.annotation.Retention(RUNTIME)\n" +
-                           "@interface Visible {\n" +
-                           "}\n");
-        doPrintElementTest("package t;" +
-                           "import java.lang.annotation.*;" +
-                           "public class T {" +
-                           "    public void test(@Ann(v=\"url\", dv=\"\\\"\\\"\") String str) { }" +
-                           "}" +
-                           "@Retention(RetentionPolicy.RUNTIME) @interface Ann {" +
-                           "    public String v();" +
-                           "    public String dv();" +
-                           "}",
-                           "package t;" +
-                           "public class T { }",
-                           "t.T",
-                           "package t;\n\n" +
-                           "public class T {\n\n" +
-                           "  public T();\n\n" +
-                           "  public void test(@t.Ann(dv=\"\\\"\\\"\", v=\"url\") java.lang.String arg0);\n" +
-                           "}\n",
-                           "t.T",
-                           "package t;\n\n" +
-                           "public class T {\n\n" +
-                           "  public T();\n" +
-                           "}\n");
+        Set<String> extraAnnotations = Set.of("Ljava/lang/annotation/Retention;");
+        CreateSymbols.HARDCODED_ANNOTATIONS.addAll(extraAnnotations);
+        try {
+            doPrintElementTest("package t;" +
+                               "import java.lang.annotation.*;" +
+                               "public @Visible @Invisible class T { public void extra() { } }" +
+                               "@Retention(RetentionPolicy.RUNTIME) @interface Visible { }" +
+                               "@Retention(RetentionPolicy.CLASS) @interface Invisible { }",
+                               "package t;" +
+                               "import java.lang.annotation.*;" +
+                               "public @Visible @Invisible class T { }" +
+                               "@Retention(RetentionPolicy.RUNTIME) @interface Visible { }" +
+                               "@Retention(RetentionPolicy.CLASS) @interface Invisible { }",
+                               "t.T",
+                               "package t;\n\n" +
+                               "@t.Invisible\n" +
+                               "@t.Visible\n" +
+                               "public class T {\n\n" +
+                               "  public T();\n\n" +
+                               "  public void extra();\n" +
+                               "}\n",
+                               "t.Visible",
+                               "package t;\n\n" +
+                               "@java.lang.annotation.Retention(RUNTIME)\n" +
+                               "@interface Visible {\n" +
+                               "}\n");
+            doPrintElementTest("package t;" +
+                               "import java.lang.annotation.*;" +
+                               "import java.util.*;" +
+                               "public class T {" +
+                               "    public void test(int h, @Invisible int i, @Visible List<String> j, int k) { }" +
+                               "}" +
+                               "@Retention(RetentionPolicy.RUNTIME) @interface Visible { }" +
+                               "@Retention(RetentionPolicy.CLASS) @interface Invisible { }",
+                               "package t;" +
+                               "import java.lang.annotation.*;" +
+                               "import java.util.*;" +
+                               "public class T {" +
+                               "    public void test(int h, @Invisible int i, @Visible List<String> j, int k) { }" +
+                               "    public void extra() { }" +
+                               "}" +
+                               "@Retention(RetentionPolicy.RUNTIME) @interface Visible { }" +
+                               "@Retention(RetentionPolicy.CLASS) @interface Invisible { }",
+                               "t.T",
+                               "package t;\n\n" +
+                               "public class T {\n\n" +
+                               "  public T();\n\n" +
+                               "  public void test(int arg0,\n" +
+                               "    @t.Invisible int arg1,\n" +
+                               "    @t.Visible java.util.List<java.lang.String> arg2,\n" +
+                               "    int arg3);\n" +
+                               "}\n",
+                               "t.Visible",
+                               "package t;\n\n" +
+                               "@java.lang.annotation.Retention(RUNTIME)\n" +
+                               "@interface Visible {\n" +
+                               "}\n");
+            doPrintElementTest("package t;" +
+                               "import java.lang.annotation.*;" +
+                               "public class T {" +
+                               "    public void test(@Ann(v=\"url\", dv=\"\\\"\\\"\") String str) { }" +
+                               "}" +
+                               "@Retention(RetentionPolicy.RUNTIME) @interface Ann {" +
+                               "    public String v();" +
+                               "    public String dv();" +
+                               "}",
+                               "package t;" +
+                               "public class T { }",
+                               "t.T",
+                               "package t;\n\n" +
+                               "public class T {\n\n" +
+                               "  public T();\n\n" +
+                               "  public void test(@t.Ann(dv=\"\\\"\\\"\", v=\"url\") java.lang.String arg0);\n" +
+                               "}\n",
+                               "t.T",
+                               "package t;\n\n" +
+                               "public class T {\n\n" +
+                               "  public T();\n" +
+                               "}\n");
+        } finally {
+            CreateSymbols.HARDCODED_ANNOTATIONS.removeAll(extraAnnotations);
+        }
     }
 
     @Test
@@ -360,11 +380,70 @@ public class CreateSymbolsTestImpl {
                Expect.SUCCESS);
     }
 
+    @Test
+    void testClearMissingAnnotations() throws Exception {
+        doPrintElementTest(new String[] {
+                               """
+                               package t;
+                               import t.impl.HC;
+                               import t.impl.HR;
+                               @HC @HR public class T {
+                                   @HC @HR public static final int i = 0;
+                                   @HC @HR public void t() {}
+                               }
+                               """,
+                               """
+                               package t.impl;
+                               import java.lang.annotation.*;
+                               @Retention(RetentionPolicy.CLASS)
+                               public @interface HC {
+                               }
+                               """,
+                               """
+                               package t.impl;
+                               import java.lang.annotation.*;
+                               @Retention(RetentionPolicy.RUNTIME)
+                               public @interface HR {
+                               }
+                               """
+                           },
+                           new String[] {
+                               """
+                               package t;
+                               public class T {
+                                   public static final int i = 0;
+                               }
+                               """
+                           },
+                           "t.T",
+                           """
+                           package t;
+
+                           public class T {
+                             public static final int i = 0;
+
+                             public T();
+
+                             public void t();
+                           }
+                           """,
+                           "t.T",
+                           """
+                           package t;
+
+                           public class T {
+                             public static final int i = 0;
+
+                             public T();
+                           }
+                           """);
+    }
+
     int i = 0;
 
     void doTest(String code7, String code8, String testCode, Expect result7, Expect result8) throws Exception {
         ToolBox tb = new ToolBox();
-        Path classes = prepareVersionedCTSym(code7, code8);
+        Path classes = prepareVersionedCTSym(new String[] {code7}, new String[] {code8});
         Path output = classes.getParent();
         Path scratch = output.resolve("scratch");
 
@@ -392,6 +471,10 @@ public class CreateSymbolsTestImpl {
     }
 
     void doPrintElementTest(String code7, String code8, String className7, String printed7, String className8, String printed8) throws Exception {
+        doPrintElementTest(new String[] {code7}, new String[] {code8}, className7, printed7, className8, printed8);
+    }
+
+    void doPrintElementTest(String[] code7, String[] code8, String className7, String printed7, String className8, String printed8) throws Exception {
         ToolBox tb = new ToolBox();
         Path classes = prepareVersionedCTSym(code7, code8);
         Path output = classes.getParent();
@@ -419,7 +502,7 @@ public class CreateSymbolsTestImpl {
     }
 
     void doTestEquivalence(String code7, String code8, String testClass) throws Exception {
-        Path classes = prepareVersionedCTSym(code7, code8);
+        Path classes = prepareVersionedCTSym(new String[] {code7}, new String[] {code8});
         Path classfile = classes.resolve("78").resolve("java.base").resolve(testClass.replace('.', '/') + ".class");
 
         if (!Files.isReadable(classfile)) {
@@ -572,11 +655,311 @@ public class CreateSymbolsTestImpl {
                            """);
     }
 
+    @Test
+    void testNonExportedSuperclass() throws Exception {
+        doTestComplex("api.Api",
+                      """
+                      package api;
+
+                      public class Api extends nonapi.Impl.Nested.Exp {
+
+                        public Api();
+                      }
+                      """,
+                      """
+                      import api.Api;
+                      public class Test {
+                          private void t(Api api) {
+                            api.run();
+                          }
+                      }
+                      """,
+                      """
+                      import api.Api;
+                      public class Test {
+                          private void t(Api api) {
+                              fail
+                          }
+                      }
+                      """,
+                      """
+                      module m {
+                          exports api;
+                      }
+                      """,
+                      """
+                      package api;
+                      import nonapi.Impl;
+                      public class Api extends Impl.Nested.Exp {
+                      }
+                      """,
+                      """
+                      package api;
+                      public @interface Ann {
+                      }
+                      """,
+                      """
+                      package nonapi;
+                      import api.Ann;
+                      public class Impl {
+                          public static final String C = "";
+                          public void test() {}
+                          @Ann
+                          public static class Nested {
+                              public static class Exp extends Nested implements Runnable {
+                                  public void run() {}
+                                  public OtherNested get() { return null; }
+                              }
+                          }
+                          public static class OtherNested {}
+                      }
+                      """);
+    }
+
+    void doTestComplex(String printClass,
+                      String expected,
+                      String depSuccess,
+                      String depFailure,
+                      String... code) throws Exception {
+        ToolBox tb = new ToolBox();
+        String testClasses = System.getProperty("test.classes");
+        Path output = Paths.get(testClasses, "test-data" + i++);
+        deleteRecursively(output);
+        Files.createDirectories(output);
+        Path ver9Jar = output.resolve("9.jar");
+        compileAndPack(output,
+                       ver9Jar,
+                       code);
+
+
+        Path ctSym = output.resolve("ct.sym");
+
+        deleteRecursively(ctSym);
+
+        CreateSymbols.ALLOW_NON_EXISTING_CLASSES = true;
+        CreateSymbols.EXTENSION = ".class";
+
+        deleteRecursively(ctSym);
+
+        List<VersionDescription> versions =
+                Arrays.asList(new VersionDescription(ver9Jar.toAbsolutePath().toString(), "9", null));
+
+        ExcludeIncludeList acceptAll = new ExcludeIncludeList(null, null) {
+            @Override public boolean accepts(String className, boolean includePrivateClasses) {
+                return true;
+            }
+        };
+        new CreateSymbols().createBaseLine(versions, acceptAll, ctSym, new String[0]);
+        Path symbolsDesc = ctSym.resolve("symbols");
+        Path systemModules = ctSym.resolve("systemModules");
+
+        Files.newBufferedWriter(systemModules).close();
+
+        Path classesZip = output.resolve("classes.zip");
+        Path classesDir = output.resolve("classes");
+
+        new CreateSymbols().createSymbols(null, symbolsDesc.toAbsolutePath().toString(), classesZip.toAbsolutePath().toString(), 0, "9", systemModules.toString());
+
+        try (JarFile jf = new JarFile(classesZip.toFile())) {
+            Enumeration<JarEntry> en = jf.entries();
+
+            while (en.hasMoreElements()) {
+                JarEntry je = en.nextElement();
+                if (je.isDirectory()) continue;
+                Path target = classesDir.resolve(je.getName());
+                Files.createDirectories(target.getParent());
+                Files.copy(jf.getInputStream(je), target);
+            }
+        }
+
+        Path classes = classesDir;
+        Path scratch = output.resolve("scratch");
+
+        Files.createDirectories(scratch);
+
+        String modulePath;
+
+        try (Stream<Path> elements = Files.list(classes)) {
+            modulePath = elements.filter(el -> el.getFileName().toString().contains("9"))
+                            .map(el -> el.resolve("m"))
+                            .map(el -> el.toAbsolutePath().toString())
+                            .collect(Collectors.joining(File.pathSeparator));
+        }
+
+        {
+            String out = new JavacTask(tb, Task.Mode.CMDLINE)
+                    .options("-d", scratch.toAbsolutePath().toString(), "--module-path", modulePath,
+                             "--add-modules", "m",  "-Xprint", "api.Api")
+                    .run(Expect.SUCCESS)
+                    .getOutput(Task.OutputKind.STDOUT)
+                    .replaceAll("\\R", "\n");
+
+            if (!out.equals(expected)) {
+                throw new AssertionError("out=" + out + "; expected=" + expected);
+            }
+        }
+
+        {
+            new JavacTask(tb)
+                    .options("-d", scratch.toAbsolutePath().toString(), "--module-path", modulePath,
+                             "--add-modules", "m")
+                    .sources(depSuccess)
+                    .run(Expect.SUCCESS)
+                    .writeAll();
+        }
+
+        {
+            String expectedFailure = new JavacTask(tb)
+                    .options("-d", scratch.toAbsolutePath().toString(), "--module-path", output.resolve("temp").toString(),
+                             "--add-modules", "m", "-XDrawDiagnostics")
+                    .sources(depFailure)
+                    .run(Expect.FAIL)
+                    .getOutput(Task.OutputKind.DIRECT)
+                    .replaceAll("\\R", "\n");
+
+            String out = new JavacTask(tb)
+                    .options("-d", scratch.toAbsolutePath().toString(), "--module-path", modulePath,
+                             "--add-modules", "m", "-XDrawDiagnostics")
+                    .sources(depFailure)
+                    .run(Expect.FAIL)
+                    .getOutput(Task.OutputKind.DIRECT)
+                    .replaceAll("\\R", "\n");
+
+            if (!out.equals(expectedFailure)) {
+                throw new AssertionError("out=" + out + "; expected=" + expectedFailure);
+            }
+        }
+    }
+
+    @Test
+    void testExtendsInternalData1() throws Exception {
+        doTestData("""
+                   module name m
+                   header exports api,nonapi[java.base] requires name\\u0020;java.base\\u0020;flags\\u0020;8000\\u0020;version\\u0020;0 flags 8000
+
+                   class name api/Ann
+                   header extends java/lang/Object implements java/lang/annotation/Annotation flags 2601
+
+                   class name api/Api
+                   header extends nonapi/Impl$Nested$Exp flags 21
+                   innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 9
+                   innerclass innerClass nonapi/Impl$Nested$Exp outerClass nonapi/Impl$Nested innerClassName Exp flags 9
+                   method name <init> descriptor ()V flags 1
+
+                   class name nonapi/Impl
+                   header extends java/lang/Object nestMembers nonapi/Impl$Nested,nonapi/Impl$Nested$Exp flags 21
+                   innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 9
+                   innerclass innerClass nonapi/Impl$Nested$Exp outerClass nonapi/Impl$Nested innerClassName Exp flags 9
+                   field name C descriptor Ljava/lang/String; constantValue  flags 19
+                   method name <init> descriptor ()V flags 1
+                   method name test descriptor ()V flags 1
+
+                   class name nonapi/Impl$Nested
+                   header extends java/lang/Object nestHost nonapi/Impl flags 21 classAnnotations @Lapi/Ann;
+                   innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 9
+                   innerclass innerClass nonapi/Impl$Nested$Exp outerClass nonapi/Impl$Nested innerClassName Exp flags 9
+                   method name <init> descriptor ()V flags 1
+
+                   class name nonapi/Impl$Nested$Exp
+                   header extends nonapi/Impl$Nested implements java/lang/Runnable nestHost nonapi/Impl flags 21
+                   innerclass innerClass nonapi/Impl$Nested outerClass nonapi/Impl innerClassName Nested flags 9
+                   innerclass innerClass nonapi/Impl$Nested$Exp outerClass nonapi/Impl$Nested innerClassName Exp flags 9
+                   method name <init> descriptor ()V flags 1
+                   method name run descriptor ()V flags 1
+                   method name get descriptor ()Lnonapi/Impl$OtherNested; flags 1
+
+                   """,
+                   """
+                   module m {
+                       exports api;
+                       exports nonapi to java.base;
+                   }
+                   """,
+                   """
+                   package api;
+                   import nonapi.Impl;
+                   public class Api extends Impl.Nested.Exp {
+                   }
+                   """,
+                   """
+                   package api;
+                   public @interface Ann {
+                   }
+                   """,
+                   """
+                   package nonapi;
+                   import api.Ann;
+                   public class Impl {
+                       public static final String C = "";
+                       public void test() {}
+                       @Ann
+                       public static class Nested {
+                           public static class Exp extends Nested implements Runnable {
+                               public void run() {}
+                               public OtherNested get() { return null; }
+                           }
+                       }
+                       public static class OtherNested {}
+                   }
+                   """);
+    }
+
+    void doTestData(String data,
+                          String... code) throws Exception {
+        String testClasses = System.getProperty("test.classes");
+        Path output = Paths.get(testClasses, "test-data" + i++);
+        deleteRecursively(output);
+        Files.createDirectories(output);
+        Path ver9Jar = output.resolve("9.jar");
+        compileAndPack(output,
+                       ver9Jar,
+                       code);
+
+        Path ctSym = output.resolve("ct.sym");
+
+        deleteRecursively(ctSym);
+
+        CreateSymbols.ALLOW_NON_EXISTING_CLASSES = true;
+        CreateSymbols.DO_NOT_MODIFY = "";
+        CreateSymbols.EXTENSION = ".class";
+        CreateSymbols.INJECTED_VERSION = "0";
+
+        deleteRecursively(ctSym);
+
+        List<VersionDescription> versions =
+                Arrays.asList(new VersionDescription(ver9Jar.toAbsolutePath().toString(), "9", null));
+
+        ExcludeIncludeList acceptAll = new ExcludeIncludeList(null, null) {
+            @Override public boolean accepts(String className, boolean includePrivateClasses) {
+                return true;
+            }
+        };
+        new CreateSymbols().createBaseLine(versions, acceptAll, ctSym, new String[0]);
+
+        Path symFile = null;
+
+        try (DirectoryStream<Path> ds = Files.newDirectoryStream(ctSym)) {
+            for (Path p : ds) {
+                if (p.toString().endsWith(".sym.txt")) {
+                    if (symFile != null) {
+                        throw new IllegalStateException("Multiple sym files!");
+                    } else {
+                        symFile = p;
+                    }
+                }
+            }
+        }
+        String acutalContent = new String(Files.readAllBytes(symFile), StandardCharsets.UTF_8);
+        if (!acutalContent.equals(data)) {
+            throw new AssertionError("out=" + acutalContent + "; expected=" + data);
+        }
+    }
+
     void doTestIncluded(String code, String... includedClasses) throws Exception {
         boolean oldIncludeAll = includeAll;
         try {
             includeAll = false;
-            Path classes = prepareVersionedCTSym(code, "package other; public class Other {}");
+            Path classes = prepareVersionedCTSym(new String[] {code}, new String[] {"package other; public class Other {}"});
             Path root = classes.resolve("7").resolve("java.base");
             try (Stream<Path> classFiles = Files.walk(root)) {
                 Set<String> names = classFiles.map(p -> root.relativize(p))
@@ -595,7 +978,7 @@ public class CreateSymbolsTestImpl {
         }
     }
 
-    Path prepareVersionedCTSym(String code7, String code8) throws Exception {
+    Path prepareVersionedCTSym(String[] code7, String[] code8) throws Exception {
         String testClasses = System.getProperty("test.classes");
         Path output = Paths.get(testClasses, "test-data" + i++);
         deleteRecursively(output);
@@ -643,7 +1026,7 @@ public class CreateSymbolsTestImpl {
                               new VersionDescription(jar8.toAbsolutePath().toString(), "8", "7"));
 
         ExcludeIncludeList acceptAll = new ExcludeIncludeList(null, null) {
-            @Override public boolean accepts(String className) {
+            @Override public boolean accepts(String className, boolean includePrivateClasses) {
                 return true;
             }
         };
@@ -674,6 +1057,36 @@ public class CreateSymbolsTestImpl {
         System.err.println(Arrays.asList(code));
         new JavacTask(tb).sources(code).options("-d", scratch.toAbsolutePath().toString()).run(Expect.SUCCESS);
         List<String> classFiles = collectClassFile(scratch);
+        Path moduleInfo = scratch.resolve("module-info.class");
+        if (Files.exists(moduleInfo)) {
+            Set<String> packages = new HashSet<>();
+            for (String cf : classFiles) {
+                int sep = cf.lastIndexOf(scratch.getFileSystem().getSeparator());
+                if (sep != (-1)) {
+                    packages.add(cf.substring(0, sep));
+                }
+            }
+            ClassFile cf = ClassFile.read(moduleInfo);
+            List<CPInfo> cp = new ArrayList<>();
+            cp.add(null);
+            cf.constant_pool.entries().forEach(cp::add);
+            Map<String, Attribute> attrs = new HashMap<>(cf.attributes.map);
+            int[] encodedPackages = new int[packages.size()];
+            int i = 0;
+            for (String p : packages) {
+                int nameIndex = cp.size();
+                cp.add(new CONSTANT_Utf8_info(p));
+                encodedPackages[i++] = cp.size();
+                cp.add(new ConstantPool.CONSTANT_Package_info(null, nameIndex));
+            }
+            int attrName = cp.size();
+            cp.add(new CONSTANT_Utf8_info(Attribute.ModulePackages));
+            attrs.put(Attribute.ModulePackages, new ModulePackages_attribute(attrName, encodedPackages));
+            ClassFile newFile = new ClassFile(cf.magic, cf.minor_version, cf.major_version, new ConstantPool(cp.toArray(new CPInfo[0])), cf.access_flags, cf.this_class, cf.super_class, cf.interfaces, cf.fields, cf.methods, new Attributes(attrs));
+            try (OutputStream out = Files.newOutputStream(moduleInfo)) {
+                new ClassWriter().write(newFile, out);
+            }
+        }
         try (Writer out = Files.newBufferedWriter(outputFile)) {
             for (String classFile : classFiles) {
                 try (InputStream in = Files.newInputStream(scratch.resolve(classFile))) {
@@ -694,6 +1107,7 @@ public class CreateSymbolsTestImpl {
             return files.filter(p -> Files.isRegularFile(p))
                         .filter(p -> p.getFileName().toString().endsWith(".class"))
                         .map(p -> root.relativize(p).toString())
+                        .filter(p -> !p.contains("impl"))
                         .collect(Collectors.toList());
         }
     }
